Integration des diagramme de classe et cas d'utilisation

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -475,8 +475,9 @@ a.boxed-btn, a.bordered-btn, a.cart-btn {
 }
 
 .breadcrumb-bg {
-  background-image: url(../img/breadcrumb-bg.jpg);
+  background-image: url(../img/list_products.jpg) !important;
 }
+
 
 .breadcrumb-text p {
   color: #F28123;
