--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2553,7 +2553,7 @@ thead {
 }
 
 tr.table-head-row th {
-  border-right: 1px solid #efefef;
+  border-right: 1px solid orange;
   padding: 15px;
   font-weight: 500;
   text-align: center;
